--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.1",
+    "@react-spring/web": "^9.7.3",
     "framer-motion": "^10.16.4",
+    "i": "^0.3.7",
+    "mongodb": "^6.1.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
+    "nodemailer": "^6.9.5",
+    "npm": "^10.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "5.2.2"
   }
 }
