--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
+    "@types/react": "18.2.25",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
