--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.1",
     "@react-spring/web": "^9.7.3",
+    "@vercel/analytics": "^1.1.0",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
     "mongodb": "^6.1.0",
