--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.1",
+    "@material-tailwind/react": "^2.1.2",
     "@react-spring/web": "^9.7.3",
     "@vercel/analytics": "^1.1.0",
     "framer-motion": "^10.16.4",
